--- a/index.html
+++ b/index.html
@@ -18,10 +18,7 @@
     <link rel="stylesheet" href="css/pembelajaran.css" />
     <link rel="stylesheet" href="css/anbk.css" />
     <link rel="stylesheet" href="css/visi-misi.css" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
-    />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" />
   </head>
   <body>
     <div id="root"></div>
